Api Busca funcionando

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="navbar">
-    <span>PopTimer</span>
+    <a mat-button routerLink="home">PopTimer</a>
     <div class="spacer"></div>
     <a mat-button routerLink="home">Home</a>
     <a mat-button routerLink="filmes">Filmes</a>
