--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -1,4 +1,4 @@
-.search {
+.container-search {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -16,7 +16,7 @@
         fixed
     ;
     background-size: cover;
-    opacity: .8;
+    opacity: .94;
     width: 100%;
     height: 40vh;
 }
@@ -25,15 +25,22 @@
     color: #f3f3f3;
 }
 
-.search-bar input{
-    max-width: 400px;
-    width: 400px;
+.search-bar {
+    display: flex;
+}
+
+.search-bar input {
+    max-width: 30rem;
+    width: 30rem;
+    font-size: 1em;
+    border-radius: 0.3rem;
+    color: #212121;
 }
 
 
 .example-form {
-    min-width: 150px;
-    max-width: 500px;
+    min-width: 13rem;
+    max-width: 36rem;
     width: 100%;
   }
   
@@ -41,3 +48,20 @@
     width: 100%;
   }
   
+
+.container-item {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 100%;
+    margin: 4em 0 1em 0;
+}
+
+/* .container-item::after {
+    content: "";
+    flex: auto;
+} */
+
+.item {
+    padding: .5rem;
+}
