--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar class="navbar">
-    <a mat-button routerLink="home">PopTimer</a>
+    <a mat-button routerLink="home" id="logo">
+        <img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg">
+    </a>
     <div class="spacer"></div>
     <a mat-button routerLink="home">Home</a>
     <a mat-button routerLink="filmes">Filmes</a>
