--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Andada|Permanent+Marker|Raleway:300');
+* {
+ box-sizing: border-box;
+}
+
 .container-search {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
     flex-flow: column wrap;
-    padding-bottom: 1em;
+    max-width: 100vw;
 }
 
 .img-wrapper {
@@ -11,7 +15,7 @@
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    background: url('https://images2.alphacoders.com/106/thumb-1920-1065219.jpg')
+    background: url('https://i.imgur.com/oRDauZ1.jpg')
         no-repeat
         fixed
     ;
@@ -19,22 +23,31 @@
     opacity: .94;
     width: 100%;
     height: 40vh;
+    margin-bottom: 3.5rem;
 }
 
 .img-wrapper h1, h2 {
-    color: #f3f3f3;
+    color: #fff;
+}
+
+.img-wrapper h1 {
+    font-size: 2.5em;
+    font-weight: bolder;
+}
+
+.img-wrapper h2 {
+    font-size: 1.6em;
 }
 
 .search-bar {
     display: flex;
 }
 
-.search-bar input {
-    max-width: 30rem;
-    width: 30rem;
-    font-size: 1em;
-    border-radius: 0.3rem;
-    color: #212121;
+.search-button {
+    display: flex;
+    align-items: center;
+    margin-left: -0.6em;
+    background-color: #14B8E1;
 }
 
 
@@ -54,7 +67,6 @@
     flex-flow: row wrap;
     justify-content: center;
     width: 100%;
-    margin: 4em 0 1em 0;
 }
 
 /* .container-item::after {
@@ -64,4 +76,50 @@
 
 .item {
     padding: .5rem;
+}
+
+/* INPUT */
+
+#namer {
+    background: #f3f3f3;
+    border-radius: 1em;
+    position: relative;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    position: relative;
+    max-width: 400px;
+    margin: auto 0;
+}
+
+#namer input {
+ border: 0;
+ border-radius: 1em;
+ width: 100%;
+ font-size: 1.2em;
+ height: 2.4em;
+ text-align: center;
+ padding: 0.6em;
+ background: transparent;
+    color: rgb(48, 48, 48);
+}
+
+#namer input:focus {
+ outline: 0;
+    color: rgb(48, 48, 48);
+}
+
+#namer input::placeholder {
+ color: rgb(173, 175, 177);
+}
+
+#namer-input.modern input {
+ font-family: 'Raleway', sans-serif;
+ text-transform: lowercase;
+ font-weight: 300;
+ letter-spacing: 10px;
+}
+
+#namer-input.cheeky input {
+ font-family: 'Permanent Marker', cursive;
+ font-size: 40px;
 }
