--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #090909; }
+body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #0a0909; }
 h1 { font-size: 18px; }
