--- a/src/app/components/movie-popup/movie-popup.component.html
+++ b/src/app/components/movie-popup/movie-popup.component.html
@@ -1,4 +1,4 @@
-<div class="popup">
+<div id="popup" class="popup">
     <div class="header">
         <h2 mat-dialog-title>
             {{ data.original_title }}
