--- a/src/app/components/movies-now-playing/movies.component.css
+++ b/src/app/components/movies-now-playing/movies.component.css
@@ -15,3 +15,9 @@
     padding: .35rem;
     box-sizing: border-box;
 }
+
+@media(max-width:440px){
+    .container::after{
+        margin-left: 12em;
+    }
+}
