--- a/src/app/components/search/search-item/search-item.component.html
+++ b/src/app/components/search/search-item/search-item.component.html
@@ -1,14 +1,20 @@
-<div class="container-searchMovie">
-    <div class="main-info">
-        <p class="searchMovie-title">{{ searchMovie.original_title }}</p>
-        <p class="searchMovie-release-date">{{ searchMovie.release_date | date: 'dd/LL/yyyy'  }}</p>
-        <p class="searchMovie-review">{{ searchMovie.vote_average }}</p>
+<div #query
+[routerLink]="['/busca/', searchMovie.id, 'details']"
+style="display: flex; flex-flow: column wrap; justify-content: center; align-items: center;"
+>
+    <div class="container-searchMovie"> 
+        <div class="main-info">
+            <p #id class="hidden" style="display: none;">{{ searchMovie.id }}
+            </p>
+            <p class="searchMovie-title">{{ searchMovie.original_title }}</p>
+            <p class="searchMovie-release-date">{{ searchMovie.release_date | date: 'dd/LL/yyyy'  }}</p>
+            <p class="searchMovie-review">{{ searchMovie.vote_average }}</p>
+        </div>
+        <div class="backdrop">
+            <img class="searchMovie-backdrop" src="https://image.tmdb.org/t/p/w1920_and_h800_multi_faces/{{ searchMovie.backdrop_path }}" alt="movie-title">
+        </div>
     </div>
-    <div class="backdrop">
-        <img class="searchMovie-backdrop" src="https://image.tmdb.org/t/p/w1920_and_h800_multi_faces/{{ searchMovie.backdrop_path }}" alt="movie-title">
+    <div class="overview">
+        <p class="searchMovie-overview">{{ searchMovie.overview }}</p>
     </div>
 </div>
-<div class="overview">
-    <p class="searchMovie-overview">{{ searchMovie.overview }}</p>
-</div>
-
