--- a/src/app/components/movies-now-playing/movies.component.html
+++ b/src/app/components/movies-now-playing/movies.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="grid">
     <app-movie-item class="item" *ngFor="let movie of movies"[movie]="movie">
     </app-movie-item>
 </div>
